--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "bootstrap": "^5.0.0-beta3",
+        "bootstrap": "^5.2.1",
+        "bootstrap-icons": "^1.9.1",
         "react-notifications": "^1.7.2"
     }
 }
