--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,17 @@
     "require": {
         "php": "^7.4.16",
         "cviebrock/eloquent-sluggable": "^8.0",
+        "dompdf/dompdf": "^1",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "illuminate/support": "^5.5|^6|^7|^8",
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.10",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0"
+        "laravel/ui": "^3.0",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.25"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
