--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "autoprefixer": "^9.8.6",
         "axios": "^0.19",
         "browser-sync": "^2.26.14",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
+        "postcss": "^8.4.20",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
+        "tailwindcss": "^3.2.4",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
