--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "browser-sync": "^2.26.14",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
+        "eslint": "^8.2.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-plugin-import": "^2.25.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "postcss": "^8.4.20",
